--- a/Zero.html
+++ b/Zero.html
@@ -135,7 +135,7 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          Zero-Reference Deep Curve Estimation (Zero-DCE)
+          <font color="LightSkyBlue">Z</font>ero-Reference <font color="LightSkyBlue">D</font>eep <font color="LightSkyBlue">C</font>urve <font color="LightSkyBlue">E</font>stimation (Zero-DCE)
         </h1>
         <h1>for Low-Light Image Enhancement</h1>
         <!--=================Authors==========================-->
@@ -152,8 +152,8 @@
         <div class="affiliations ">
           <sup>1</sup> Tianjin University, Tianjin, China <br>
           <sup>2</sup> City University of Hong Kong, Hong Kong<br>
-          <sup>2</sup> Nanyang Technological University, Singapore<br>
-          <sup>3</sup> Beijing Jiaotong University, Beijing, China
+          <sup>3</sup> Nanyang Technological University, Singapore<br>
+          <sup>4</sup> Beijing Jiaotong University, Beijing, China
         </div>
         <!--=================Tabs==========================-->
         <ul id="tabs">
