--- a/Zero.html
+++ b/Zero.html
@@ -135,7 +135,7 @@
     <div id="content-inner">
       <div class="section head">
         <h1>
-          <font color="LightSkyBlue">Z</font>ero-Reference <font color="LightSkyBlue">D</font>eep <font color="LightSkyBlue">C</font>urve <font color="LightSkyBlue">E</font>stimation (Zero-DCE)
+          <font color="LightSkyBlue">Z</font>ero-Reference <font color="LightSkyBlue">D</font>eep <font color="LightSkyBlue">C</font>urve <font color="LightSkyBlue">E</font>stimation (<font color="LightSkyBlue">Zero-DCE</font>)
         </h1>
         <h1>for Low-Light Image Enhancement</h1>
         <!--=================Authors==========================-->
