--- a/Zero.html
+++ b/Zero.html
@@ -145,7 +145,7 @@
           Jichang Guo <sup>1</sup> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="http://personal.ie.cuhk.edu.hk/~ccloy/index.html" target="_blank">Chen Change Loy</a> <sup>3</sup>
           <a href="https://sites.google.com/site/junhuihoushomepage/" target="_blank">Junhui Hou</a> <sup>2</sup>
-          <a href="http://www.cs.cityu.edu.hk/~cssamk/research_group/index.html" target="_blank">Sam Kwong</a> <sup>2</sup>
+          <a href="www.cs.cityu.edu.hk/~cssamk/research_group/index.html" target="_blank">Sam Kwong</a> <sup>2</sup>
           <a href="https://rmcong.github.io/" target="_blank">Runmin Cong</a> <sup>4</sup>
         </div>
 
