--- a/Zero.html
+++ b/Zero.html
@@ -157,11 +157,11 @@
         </div>
         <!--=================Tabs==========================-->
         <ul id="tabs">
-          <li><a href="https://xinntao.github.io/projects/EDVR#materials" name="#tab1">Materials</a></li>
-          <li><a href="https://xinntao.github.io/projects/EDVR#pcd_tsa" name="#tab2">PCD &amp; TSA</a></li>
-          <li><a href="https://xinntao.github.io/projects/EDVR#ablations" name="#tab3">Ablations</a></li>
-          <li><a href="https://xinntao.github.io/projects/EDVR#results" name="#tab4">Results</a></li>
-          <li><a href="https://xinntao.github.io/projects/EDVR#citation" name="#tab5">Citation</a></li>
+          <li><a href="https://li-chongyi.github.io/Zero.html#materials" name="#tab1">Materials</a></li>
+          <li><a href="https://li-chongyi.github.io/Zero.html#pcd_tsa" name="#tab2">PCD &amp; TSA</a></li>
+          <li><a href="https://li-chongyi.github.io/Zero.html#ablations" name="#tab3">Ablations</a></li>
+          <li><a href="https://li-chongyi.github.io/Zero.html#results" name="#tab4">Results</a></li>
+          <li><a href="https://li-chongyi.github.io/Zero.html#citation" name="#tab5">Citation</a></li>
       </ul></div>
       <br>
       <!--=================Teasers==========================-->
