--- a/sub_publication.html
+++ b/sub_publication.html
@@ -47,7 +47,7 @@
 <li> Runmin Cong, <strong>Chongyi Li</strong>, et al., Multi-Modality Soft-to-Hard Attention Network for RGB-D Saliency Detection, <strong><ud2> Top Conference</ud2></strong>  (co-first and corresponding author) </li>   
 <li> Saeed Anwar and <strong>Chongyi Li</strong>, Diving Deeper into Underwater Image Enhancement: A Survey, <strong><ud2> IJCV</ud2></strong> <a href="https://arxiv.org/pdf/1907.07863.pdf" target="_blank"><font color="#1C86EE">[PDF]</font></a> (co-first author) </li>
 <li> Miao Yang, Hu Ke, <strong>Chongyi Li</strong>, et al., UW-Net: An inception-attention network for underwater image classification, <strong><ud2> IEEE Transactions on Image Processing (TIP)</ud2></strong>  </li>   
- 
+<li> Hua Li, Runmin Cong, <strong>Chongyi Li</strong>, et al., Stereo Superpixel: An Iterative Framework based on Parallax Consistency and Collaborative Optimization, <strong><ud2> Top Conference</ud2></strong> </li>   
 
 </ol>   
   
