--- a/Proj_Zero-DCE.html
+++ b/Proj_Zero-DCE.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0048)https://xinntao.github.io/projects/EDVR#citation -->
+
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</title>
@@ -311,8 +311,8 @@ Ablation study of the advantage of three-channel adjustment (RGB, CIE Lab, YCbCr
             </td>
             <td width="20%">
               <center>
-                <a href="https://arxiv.org/abs/2001.06826" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
-                <a href="https://arxiv.org/abs/2001.06826" target="_blank">Supplementary Material</a>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Zero-DCE_supplementary%20material.pdf" target="_blank" class="imageLink"><img src="./Zero-DCE_files/paper.png" ,="" width="80%"></a><br><br>
+                <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/Zero-DCE_supplementary%20material.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
             <td width="20%">
