--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 <li>IEEE Transactions on Image Processing</li>
 <li>IEEE Transactions on Cybernetics</li>
 <li>IEEE Transactions on Circuits and Systems for Video Technology</li>  
+<li>IEEE Transactions on Neural Networks and Learning Systems</li>  
 <li>IEEE Transactions on Broadcasting</li>
 <li>IEEE Transactions on Instrumentation and Measurement</li>
 <li>IEEE Transactions on Circuits and Systems II: Express Briefs</li>  
