--- a/proj_SR.html
+++ b/proj_SR.html
@@ -58,7 +58,7 @@
 
  
 <hr />
-<h4>Our results: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a> </h4>
+<h4>Our results: <a href="https://pan.baidu.com/s/1C6MLF975REXGxPrRfH6pmA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 08lb]</font></a>  <a href="https://drive.google.com/open?id=1VwgXgvVywAiqJllKAR6Cf_ExsFJdZ7ro" target="_blank"><font color="#ff0000">[Google Drive]</font></a> </h4>
 <h4>TensorFlow Codes: </h4>
      <h4>2x_MODEL: <a href="https://pan.baidu.com/s/1PIWCe8j5uJKoOPqsLTWMNA" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 7dso]</font></a> </h4>
      <h4>3x_MODEL: <a href="https://pan.baidu.com/s/14Aj9M-4b8uruB-2vey8m_g" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: 1o9y]</font></a> </h4>
