--- a/proj_SR.html
+++ b/proj_SR.html
@@ -67,7 +67,9 @@
      <h4>16x_MODEL: <a href="https://pan.baidu.com/s/10e8VlATqOovbRKQVGtmmUQ" target="_blank"><font color="#ff0000">[Baidu Cloud Link, PASSWORD: bsch]</font></a> </h4>
      
 <h4>How to run the Codes: </h4>
-     <h4>1. Put the testing images into DATA_TEST and follow the format of exmples; 2. Python main.py; and 3. Find the results in the Sample (down.png is the bicubic input, rgb.png is the intensity of RGB image, sr.png is our result, and up.png is the corresponding GT.).</h4>
+     <h4>1. Put the testing images into DATA_TEST and follow the format of exmples;</h4> 
+       2. Python main.py; and </h4>
+       3. Find the results in the Sample (down.png is the bicubic input, rgb.png is the intensity of RGB image, sr.png is our result, and up.png is the corresponding GT.).</h4>
   
   <hr />
         
