--- a/index.html
+++ b/index.html
@@ -139,33 +139,18 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service (Reviewer):</h2>
 
 <ul>
-<li>IEEE Transactions on Image Processing</li>
-<li>IEEE Transactions on Cybernetics</li>
-<li>IEEE Transactions on Circuits and Systems for Video Technology</li>  
-<li>IEEE Transactions on Neural Networks and Learning Systems</li>  
-<li>IEEE Transactions on Broadcasting</li>
-<li>IEEE Transactions on Instrumentation and Measurement</li>
-<li>IEEE Transactions on Circuits and Systems II: Express Briefs</li>  
-<li>IEEE ACCESS</li>
-<li>IEEE Signal Processing Letters</li>
-<li>IEEE Journal of Ocean Engineering</li>
-<li>Elsevier Journal of Ocean Engineering</li>
-<li>Elsevier Digital Signal Processing</li>
-<li>Elsevier Neurocomputing</li>
-<li>Elsevier Pattern Recognition Letters</li>
-<li>Elsevier Signal Processing: Image Communication</li>
-<li>Elsevier Journal of Computers & Graphics</li>
-<li>Springer The Visual Computer</li>
-<li>Springer SCIENCE CHINA Information Sciences</li>
-<li>Springer Machine Vision and Applications</li>
-<li>Springer EURASIP Journal on Image and Video Processing</li> 
+<li>IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;IEEE Transactions on Circuits and Systems for Video Technology
+;IEEE Transactions on Neural Networks and Learning Systems;IEEE Transactions on Broadcasting;IEEE Transactions on Instrumentation and Measurement</li>
+;IEEE Transactions on Circuits and Systems II: Express Briefs;IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering</li>
+<li>Elsevier Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters</li>
+;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics</li>
+<li>Springer The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing</li> 
 <li>ACM Computing Surveys</li>
 <li>IET Computer Vision</li>
 <li>SPIE Journal of Electronic Imaging</li>
 <li>International Journal of Electrical and Computer Engineering</li>
-<li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018</li>
-<li>27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>
-<li>IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
+<li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>
+;IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
 </ul>
 <br>
 <hr />    
