--- a/index.html
+++ b/index.html
@@ -139,18 +139,29 @@
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Professional Service (Reviewer):</h2>
 
 <ul>
-<li>IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;IEEE Transactions on Circuits and Systems for Video Technology
-;IEEE Transactions on Neural Networks and Learning Systems;IEEE Transactions on Broadcasting;IEEE Transactions on Instrumentation and Measurement</li>
-;IEEE Transactions on Circuits and Systems II: Express Briefs;IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering</li>
-<li>Elsevier Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters</li>
-;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics</li>
-<li>Springer The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing</li> 
+<li>IEEE:</li>
+<li>IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;
+IEEE Transactions on Circuits and Systems for Video Technology;IEEE Transactions on Neural Networks and Learning Systems;
+IEEE Transactions on Broadcasting;IEEE Transactions on Instrumentation and Measurement;IEEE Transactions on Circuits and Systems II: Express Briefs;
+IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering</li>
+
+<li>Elsevier:</li> 
+<li>Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics</li>
+
+<li>Springer:</li> 
+<li>The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing</li> 
+
+<li>ACM:</li> 
 <li>ACM Computing Surveys</li>
-<li>IET Computer Vision</li>
-<li>SPIE Journal of Electronic Imaging</li>
-<li>International Journal of Electrical and Computer Engineering</li>
-<li>24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member)</li>
-;IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
+
+<li>IET:</li> 
+<li>Computer Vision</li>
+
+<li>SPIE:</li> 
+<li>Journal of Electronic Imaging</li>
+
+<li>Conference:</li>
+<li>International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member);IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
 </ul>
 <br>
 <hr />    
