--- a/index.html
+++ b/index.html
@@ -140,28 +140,28 @@
 
 <ul>
 <li>IEEE:</li>
-<li>IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;
+IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;
 IEEE Transactions on Circuits and Systems for Video Technology;IEEE Transactions on Neural Networks and Learning Systems;
 IEEE Transactions on Broadcasting;IEEE Transactions on Instrumentation and Measurement;IEEE Transactions on Circuits and Systems II: Express Briefs;
-IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering</li>
+IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering
 
 <li>Elsevier:</li> 
-<li>Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics</li>
+Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics
 
 <li>Springer:</li> 
-<li>The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing</li> 
+The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing
 
 <li>ACM:</li> 
-<li>ACM Computing Surveys</li>
+ACM Computing Surveys
 
 <li>IET:</li> 
-<li>Computer Vision</li>
+Computer Vision
 
 <li>SPIE:</li> 
-<li>Journal of Electronic Imaging</li>
+Journal of Electronic Imaging
 
 <li>Conference:</li>
-<li>International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member);IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020</li>
+International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member);IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020
 </ul>
 <br>
 <hr />    
