--- a/index.html
+++ b/index.html
@@ -140,19 +140,18 @@
 
 <ul>
 <li>IEEE:</li>
-IEEE Transactions on Image Processing;IEEE Transactions on Cybernetics;
-IEEE Transactions on Circuits and Systems for Video Technology;IEEE Transactions on Neural Networks and Learning Systems;
-IEEE Transactions on Broadcasting;IEEE Transactions on Instrumentation and Measurement;IEEE Transactions on Circuits and Systems II: Express Briefs;
-IEEE ACCESS;IEEE Signal Processing Letters;IEEE Journal of Ocean Engineering
+IEEE Transactions on Image Processing; IEEE Transactions on Cybernetics; IEEE Transactions on Circuits and Systems for Video Technology; IEEE Transactions on Neural Networks and Learning Systems;
+IEEE Transactions on Broadcasting; IEEE Transactions on Instrumentation and Measurement; IEEE Transactions on Circuits and Systems II: Express Briefs; 
+IEEE ACCESS; IEEE Signal Processing Letters; IEEE Journal of Ocean Engineering
 
 <li>Elsevier:</li> 
-Journal of Ocean Engineering;Elsevier Digital Signal Processing;Elsevier Neurocomputing;Elsevier Pattern Recognition Letters;Elsevier Signal Processing: Image Communication;Elsevier Journal of Computers & Graphics
+Journal of Ocean Engineering; Digital Signal Processing; Neurocomputing; Pattern Recognition Letters; Signal Processing: Image Communication; Journal of Computers & Graphics
 
 <li>Springer:</li> 
-The Visual Computer;Springer SCIENCE CHINA Information Sciences;Springer Machine Vision and Applications;Springer EURASIP Journal on Image and Video Processing
+The Visual Computer; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
 
 <li>ACM:</li> 
-ACM Computing Surveys
+Computing Surveys
 
 <li>IET:</li> 
 Computer Vision
@@ -161,7 +160,7 @@ Computer Vision
 Journal of Electronic Imaging
 
 <li>Conference:</li>
-International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018;27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member);IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020
+International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018; 27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member); IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020
 </ul>
 <br>
 <hr />    
