--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ IEEE Transactions on Broadcasting; IEEE Transactions on Instrumentation and Meas
 IEEE ACCESS; IEEE Signal Processing Letters; IEEE Journal of Ocean Engineering
 
 <li>Elsevier:</li> 
-Journal of Ocean Engineering; Digital Signal Processing; Neurocomputing; Pattern Recognition Letters; Signal Processing: Image Communication; Journal of Computers & Graphics
+Journal of Ocean Engineering; Digital Signal Processing; Neurocomputing; Pattern Recognition Letters; Signal Processing: Image Communication; Journal of Computers & Graphics; Knowledge-based Systems 
 
 <li>Springer:</li> 
 The Visual Computer; SCIENCE CHINA Information Sciences; Machine Vision and Applications; EURASIP Journal on Image and Video Processing
