--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Computer Vision
 Journal of Electronic Imaging
 
 <li>Conference:</li>
-International Journal of Electrical and Computer Engineering; 24th International Conference on Pattern Recognition (ICPR), Beijing, China, 2018; 27th ACM International Conference on Multimedia (ACM MM), Nice, France, 2019 (Program Committee Member); IEEE International Conference on Multimedia and Expo (ICME), London, United Kingdom, 2020
+ICPR2018; ACM MM2019 (Program Committee Member);ICME2020
 </ul>
 <br>
 <hr />    
