--- a/index.html
+++ b/index.html
@@ -86,26 +86,45 @@
 <li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
 <li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
 <p> If you use this code, please cite the related paper. Thanks.</p>
-<li> <strong>Chongyi Li</strong>, Chunle Guo, Jichang Guo, Ping Han, Huazhu Fu, Runmin Cong, <ud2>PDR-Net: Perception-inspired Single Image Dehazing Network with Refinement</ud2> is accepted by <strong>IEEE Transactions on Multimedia</strong>.</li> 
-<li> Miao Yang, Jintong Hu, <strong>Chongyi Li</strong>, Gustava Rohde, Yixiang Du, and Ke Hu, <ud2>An In-depth Survey of Underwater Image Enhancement and Restoration</ud2> is accepted by <strong>IEEE ACCESS</strong>.</li>   
-<li> <strong>Chongyi Li</strong>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong, <ud2>Nested Network with Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</ud2> is accepted by <strong>IEEE Transactions on Geoscience and Remote Sensing</strong>.</li> 
-<li>We released our TIP 2019 depth super-resolution code. Have fun! <a href="https://li-chongyi.github.io/proj_SR.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
-<p> If you use this code, please cite the related paper. Thanks.</p>
-<p> C. Guo, C. Li, J. Guo, et al., “Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution,” IEEE Trans. Image Process., vol. 28, no. 5, pp.2545-2557, 2019. </p>
-<li>Bo Wang and Chongyi Li, <ud2> A Visual Hierarchical Framework Based Model for Underwater Image Enhancement</ud2> is accepted by <strong>Frontiers of Computer Science</strong>.</li>
-<li>One China Patent has been authorized by State Intellectual Property Office.</li>
-<li>Program Committee Member, ACM International Conference on Multimedia (ACM MM), Nice, France, 2019</li>
-<li>We released our TIP 2016 underwater image enhancement code. Have fun! <a href="https://github.com/Li-Chongyi/TIP2016-code" target="_blank"><font color="#ff0000">[Github Link]</font></a></a></li> 
-<p> If you use this code, please cite the related papers. Thanks.</p>
-<p> C. Li, J. Guo, R. Cong, et al., “Underwater image enhancement by dehazing with minimum information loss and histogram distribution prior,” IEEE Trans. Image Process., vol. 25, no. 12, pp.5664-5677, 2016. </p>
-<p> C. Li, J. Guo, S. Chen, et al., “Underwater image restoration based on minimum information loss principle and optical properties of underwater imaging”, IEEE ICIP , pp. 1993-1997 (2016). </p>
- 
-<li>Chunle Guo, <strong>Chongyi Li<sup>*</sup></strong>, Jichang Guo, et al, <ud2>Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</ud2> is accepted by <strong>IEEE Transactions on Image Processing</strong>.</li> (<sup>*</sup>co-first author and corresponding author)
+
+
 </ul>
 <br>
 <hr />
  
-  
+
+<h2>
+<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
+
+	<div class="container">
+		<h2>Publications</h2>
+        <br>
+        <h3>2020</h3>
+        <div class="publication">
+            <img src="./homepage_files/ocda_logo.png" class="publogo" width="200 px">
+            <p> 
+                <strong>
+                    <a href="https://arxiv.org/abs/1909.03403">Compound Domain Adaptation in an Open World</a>
+                </strong>
+                <br>
+                <br>
+                <b>Ziwei Liu*</b>, Zhongqi Miao*, Xingang Pan, Xiaohang Zhan, Stella X. Yu, Dahua Lin, Boqing Gong.
+                <br>
+                <em>arXiv Preprint, 2019</em>
+                <br>
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/1909.03403">PDF</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+<br>
+<hr />
+
+
+
 <h2>
 <a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Participating Projects:</h2>
 
