--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <br>
         <h3>2020</h3>
         <div class="publication">
-            <img src="./homepage_files/ocda_logo.png" class="publogo" width="200 px">
+            <img src="https://github.com/Li-Chongyi/li-chongyi.github.io/blob/master/Zero-DCE_files/framework.png" class="publogo" width="200 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/1909.03403">Compound Domain Adaptation in an Open World</a>
