--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 <meta name="viewport" content="width=device-width">
+<script async="" src="./analytics.js"></script>
 </head>
 <body>
 <div class="wrapper">
