--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index,follow">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<!-- <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
   <title>Homepage of Chongyi Li</title>
 	<style>
 
@@ -123,9 +123,6 @@ a, a:visited { color : #0050e7; }
 <p> If you use this code, please cite the related paper. Thanks.</p>
 <li> <strong>Chongyi Li</strong>, Saeed Anwar, and Fatih Porikli, <ud2>Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</ud2> is accepted by <strong>Pattern Recognition</strong>. We will release the codes soon.</li> 
 <li><strong>ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D salient Object Detection</strong>. Invited Talk, ShenZhen Institutes of Advanced Technology, Chinese Academy of Sciences. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/talk_poster1.jpg" target="_blank"><font color="#ff0000">[Poster]</font></a></a></li>  
-<li>We released our TGRS 2019 Salient Object Detection in Optical Remote Sensing Images (Dataset and Resutls). Have fun! <a href="https://li-chongyi.github.io/proj_optical_saliency.html" target="_blank"><font color="#ff0000">[Project page]</font></a></a></li> 
-<p> If you use this code, please cite the related paper. Thanks.</p>
-
 
 </ul>
 <br>
@@ -136,24 +133,22 @@ a, a:visited { color : #0050e7; }
 <a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
 
 	<div class="container">
-		<h2>Publications</h2>
         <br>
-        <h3>2020</h3>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="400 px">
             <p> 
                 <strong>
-                    <a href="https://arxiv.org/abs/1909.03403">Compound Domain Adaptation in an Open World</a>
+                    <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
                 </strong>
                 <br>
                 <br>
-                <b>Ziwei Liu*</b>, Zhongqi Miao*, Xingang Pan, Xiaohang Zhan, Stella X. Yu, Dahua Lin, Boqing Gong.
+                <b>Chunle Guo*</b>, Chongyi Li*, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
-                <em>arXiv Preprint, 2019</em>
+                <em>arXiv Preprint, 2020</em>
                 <br>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/1909.03403">PDF</a>
+                    <a href="https://arxiv.org/abs/2001.06826">PDF</a>
                 </span>
             </p>
         </div>
