--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index,follow">
 <head>
 <meta charset="utf-8">
-<!-- <meta http-equiv="X-UA-Compatible" content="chrome=1">-->
+ <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Homepage of Chongyi Li</title>
 	<style>
 
@@ -246,6 +246,6 @@ ICPR2018; ACM MM2019 (Program Committee Member);ICME2020
 </section>
 
 </div>
-<script src="javascripts/scale.fix.js"></script>
+<!--<script src="javascripts/scale.fix.js"></script>-->
 </body>
 </html>  
