--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
         <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="400 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
@@ -151,7 +151,29 @@ a, a:visited { color : #0050e7; }
                     <a href="https://arxiv.org/abs/2001.06826">PDF</a>
                 </span>
             </p>
+</div>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/robustnas_logo.png" class="publogo" width="200 px">
+            <p> 
+                <strong>
+                    <a href="https://arxiv.org/abs/1911.10695">When NAS Meets Robustness: In Search of Robust Architectures against Adversarial Attacks</a>
+                </strong>
+                <br>
+                <br>
+                Minghao Guo, Yuzhe Yang, Rui Xu, <b>Ziwei Liu</b>.
+                <br>
+                <em>arXiv Preprint, 2019</em>
+                <br>
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/1911.10695">PDF</a>
+                </span>
+            </p>
         </div>
+        <br>
         <br>
         <br>
 <br>
