--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
-<html>
+<!--<!doctype html>
+<html>-->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <!-- Meta tags for search engines to crawl -->
 <meta name="robots" content="index,follow">
 <head>
-<meta charset="utf-8">
- <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<!--<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">-->
   <title>Homepage of Chongyi Li</title>
 	<style>
 
