--- a/index.html
+++ b/index.html
@@ -128,11 +128,8 @@ a, a:visited { color : #0050e7; }
 <br>
 <hr />
  
-
-<h2>
-<a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
-
-	<div class="container">
+<div class="container">
+<h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
         <div class="publication">
             <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
@@ -142,7 +139,7 @@ a, a:visited { color : #0050e7; }
                 </strong>
                 <br>
                 <br>
-                <b>Chunle Guo*</b>, Chongyi Li*, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
+                Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
                 <em>arXiv Preprint, 2020</em>
                 <br>
@@ -151,10 +148,10 @@ a, a:visited { color : #0050e7; }
                     <a href="https://arxiv.org/abs/2001.06826">PDF</a>
                 </span>
             </p>
-</div>
-        <br>
-        <br>
-        <br>
+            </div>
+            <br>
+            <br>
+            <br>
         <div class="publication">
             <img src="./homepage_files/robustnas_logo.png" class="publogo" width="200 px">
             <p> 
