--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ a, a:visited { color : #0050e7; }
 .external a { margin : 0 10px; }
 .external a.first { margin : 0 10px 0 0; }
 	</style>
-<link rel="stylesheet" href="stylesheets/styles.css">
+<!--<link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width">-->
 <script async="" src="./analytics.js"></script>
 </head>
 <body>
