--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ a, a:visited { color : #0050e7; }
 .external a { margin : 0 10px; }
 .external a.first { margin : 0 10px 0 0; }
 	</style>
-<!--<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-<meta name="viewport" content="width=device-width">-->
+<meta name="viewport" content="width=device-width">
 <script async="" src="./analytics.js"></script>
 </head>
 <body>
@@ -146,6 +146,8 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2001.06826">PDF</a>
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html/">Project Page</a>
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
             </p>
             </div>
