--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a, a:visited { color : #0050e7; }
 <hr />
  
 <div class="container">
-<h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
+<!--<h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>-->
         <br>
         <div class="publication">
             <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
