--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a, a:visited { color : #0050e7; }
 <body>
 <div class="wrapper">
 <header>
-<h7>Chongyi Li</h7><br><br></div>
+<h7>Chongyi Li</h7><br><br>
 <div>
 <img src="sub_img/lichongyi.jpg" border="0" width="80%"><br></div><br>
 
