--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
@@ -152,7 +152,7 @@ a, a:visited { color : #0050e7; }
             <br>
             <br>
             <br>
-        <div class="publication">
+        <!--<div class="publication">
             <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
             <p> 
                 <strong>
@@ -172,7 +172,7 @@ a, a:visited { color : #0050e7; }
         </div>
         <br>
         <br>
-        <br>
+        <br>-->
     </div>
 <br>
 <hr />
