--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2001.06826">PDF</a>
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html/">Project Page</a>
+                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
             </p>
