--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" height="100 px",width="300 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
