--- a/index.html
+++ b/index.html
@@ -152,27 +152,29 @@ a, a:visited { color : #0050e7; }
             <br>
             <br>
             <br>
-        <!--<div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="200 px">
+            <br>
+            <br>
+        <div class="publication">
+            <img src="./sub_img/Benchmark_samples.png" class="publogo" width="200 px">
             <p> 
                 <strong>
-                    <a href="https://arxiv.org/abs/1911.10695">When NAS Meets Robustness: In Search of Robust Architectures against Adversarial Attacks</a>
+                    <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
                 <br>
                 <br>
-                Minghao Guo, Yuzhe Yang, Rui Xu, <b>Ziwei Liu</b>.
+                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
-                <em>arXiv Preprint, 2019</em>
+                <em>TIP, 2020</em>
                 <br>
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/1911.10695">PDF</a>
+                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
                 </span>
             </p>
         </div>
         <br>
         <br>
-        <br>-->
+        <br>
     </div>
 <br>
 <hr />
