--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <br>
                 <span class="links">
+                <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
+                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
+                    <a href="https://github.com/Li-Chongyi/Water-Net_Codel">Code</a>
+                </span>
                 </span>
             </p>
         </div>
