--- a/index.html
+++ b/index.html
@@ -141,19 +141,18 @@ a, a:visited { color : #0050e7; }
                 Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
                 <br>
                 <em>arXiv Preprint, 2020</em>
-                <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2001.06826">PDF</a>
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>
                     <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
                 </span>
             </p>
-            </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+          </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         <div class="publication">
             <img src="./sub_img/Benchmark_samples.png" class="publogo" width="300 px">
             <p> 
@@ -163,22 +162,19 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
-                <em>TIP, 2020</em>
-                <br>
-                <br>
+                <em>IEEE Transactions on Image Processing (TIP), 2020</em>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
                     <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
                     <a href="https://github.com/Li-Chongyi/Water-Net_Codel">Code</a>
                 </span>
-            </p>
+           </p>
         </div>
         <br>
         <br>
         <br>
-        <br>
-        <br>
-    </div>
+
+</div>
 <br>
 <hr />
 
