--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ body { padding : 0; font-family : Arial; font-size : 16px; background-color : #f
 a { text-decoration : none; }
 a:hover { text-decoration : underline; }
 a, a:visited { color : #0050e7; }
-.publogo { width: 100 px; margin-right : 20px; float : left; border : 0;}
+.publogo { width: 100 px; margin-right : 10px; float : left; border : 0;}
 .publication { clear : left; padding-bottom : 0px; }
 .publication p { height : 100px; padding-top : 5px;}
 .publication strong a { color : #0000A0; }
-.publication .links { position : relative; top : 15px }
+.publication .links { position : relative; top : 10px }
 .publication .links a { margin-right : 20px; }
 .codelogo { margin-right : 10px; float : left; border : 0;}
 .code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
@@ -162,11 +162,11 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
-                <em>IEEE Transactions on Image Processing (TIP), 2020</em>
+                <em>(TIP), 2020</em>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
                     <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
-                    <a href="https://github.com/Li-Chongyi/Water-Net_Codel">Code</a>
+                    <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
                 </span>
            </p>
         </div>
