--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a, a:visited { color : #0050e7; }
 .publication { clear : left; padding-bottom : 0px; }
 .publication p { height : 100px; padding-top : 5px;}
 .publication strong a { color : #0000A0; }
-.publication .links { position : relative; top : 10px }
+.publication .links { position : ; top : 10px }
 .publication .links a { margin-right : 20px; }
 .codelogo { margin-right : 10px; float : left; border : 0;}
 .code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
