--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a, a:visited { color : #0050e7; }
 .publication { clear : left; padding-bottom : 0px; }
 .publication p { height : 100px; padding-top : 5px;}
 .publication strong a { color : #0000A0; }
-.publication .links { position : ; top : 10px }
+.publication .links { position :relative ; top : 10px }
 .publication .links a { margin-right : 20px; }
 .codelogo { margin-right : 10px; float : left; border : 0;}
 .code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
@@ -160,10 +160,11 @@ a, a:visited { color : #0050e7; }
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
+		 <em>(TIP), 2020</em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
-                <em>(TIP), 2020</em>
+               
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
                     <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
@@ -173,6 +174,27 @@ a, a:visited { color : #0050e7; }
         </div>
         <br>
         <br>
+        <br>
+          <br>
+          <br>
+        <div class="publication">
+            <img src="./sub_img/Benchmark_samples.png" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
+                </strong>
+		 <em>(TIP), 2020</em>
+                <br>
+                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
+                <br>
+               
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
+                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
+                    <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
+                </span>
+           </p>
+        </div>
         <br>
 
 </div>
