--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@ a, a:visited { color : #0050e7; }
 	  <br>
           <br>
 	  <br>
-	   <br>
         <div class="publication">
-            <img src="./sub_img/Benchmark_samples.png" class="publogo" width="300 px">
+            <img src="./sub_img/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
