--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ a, a:visited { color : #0050e7; }
           <br>
 	  <br>
         <div class="publication">
-            <img src="./sub_img/framework.png" class="publogo" width="300 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
