--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body { padding : 0; font-family : Arial; font-size : 16px; background-color : #f
 a { text-decoration : none; }
 a:hover { text-decoration : underline; }
 a, a:visited { color : #0050e7; }
-.publogo { width: 100 px; height: 100 px; margin-right : 10px; float : left; border : 0;}
+.publogo { width: 100 px; margin-right : 10px; float : left; border : 0;}
 .publication { clear : left; padding-bottom : 0px; }
 .publication p { height : 100px; padding-top : 5px;}
 .publication strong a { color : #0000A0; }
@@ -154,7 +154,7 @@ a, a:visited { color : #0050e7; }
           <br>
 	  <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px; height: 100 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" height="270" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
@@ -174,7 +174,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
-            <img src="./sub_img/Benchmark_samples.png" class="publogo" width="300 px; height: 100 px">
+            <img src="./sub_img/Benchmark_samples.png" class="publogo" height="270" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
