--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" height="110"width="300 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
@@ -151,30 +151,8 @@ a, a:visited { color : #0050e7; }
           <br>
           <br>
 	  <br>
-          <br>
-	  <br>
         <div class="publication">
-            <img src="./benchmark_logo.png" class="publogo" height="120" width="300 px">
-            <p> 
-                <strong>
-                    <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
-                </strong>
-		 <em>(TIP), 2020</em>
-                <br>
-                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
-                <br>
-                <span class="links">
-                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
-                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
-                    <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
-                </span>
-
-           </p>
-        </div>
-        <br>
-        <br>
-        <div class="publication">
-            <img src="./sub_img/Benchmark_samples.png" class="publogo" height="150 px" width="300 px">
+            <img src="./benchmark_logo.png" class="publogo" height="110" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
@@ -191,8 +169,27 @@ a, a:visited { color : #0050e7; }
            </p>
         </div>
         <br>
+        <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
+            <img src="./sub_img/Benchmark_samples.png" class="publogo" height="120" width="300 px">
+            <p> 
+                <strong>
+                    <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
+                </strong>
+		 <em>(TIP), 2020</em>
+                <br>
+                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
+                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
+                    <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
+                </span>
+           </p>
+        </div>
+        <br>
+        <div class="publication">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" height="120" width="300 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
