--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ a, a:visited { color : #0050e7; }
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" height="110"width="300 px">
+            <img src="./Zero-DCE_files/framework.png" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
@@ -150,14 +150,13 @@ a, a:visited { color : #0050e7; }
           </div>
           <br>
           <br>
-	  <br>
         <div class="publication">
             <img src="./benchmark_logo.png" class="publogo" height="110" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
-		 <em>(TIP), 2020</em>
+		 <em>TIP, 2020</em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
