--- a/index.html
+++ b/index.html
@@ -170,19 +170,20 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
-            <img src="./sub_img/Benchmark_samples.png" class="publogo" height="120" width="300 px">
+            <img src="./tgars_logo.png" class="publogo" height="110" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
+                    <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		 <em>(TIP), 2020</em>
                 <br>
-                <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
+                <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
                 <span class="links">
-                    <a href="https://ieeexplore.ieee.org/document/8917818">PDF</a>
-                    <a href="https://li-chongyi.github.io/proj_benchmark.html">Project Page</a>
-                    <a href="https://github.com/Li-Chongyi/Water-Net_Code">Code</a>
+                    <a href="https://ieeexplore.ieee.org/document/8793227">PDF</a>
+                    <a href="https://li-chongyi.github.io/proj_optical_saliency.html">Project Page</a>
+		    <a href="https://drive.google.com/file/d/15FOnRo1xnz05fcNkXBhWy8WL0C26i8y4/view">Benchmark</a>
+                    <a href="https://drive.google.com/file/d/1nnZKphu9_4oBvie4yqdxG95tYZRsqj4W/view">Results</a>
                 </span>
            </p>
         </div>
