--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
-            <img src="./tgars_logo.png" class="publogo" height="110" width="300 px">
+            <img src="./tgars_logo.png" class="publogo" height="120" width="300 px">
             <p> 
                 <strong>
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
-		 <em>(TIP), 2020</em>
+		 <em>TGARS, 2019</em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -188,6 +188,7 @@ a, a:visited { color : #0050e7; }
            </p>
         </div>
         <br>
+	<br>
         <div class="publication">
             <img src="./Zero-DCE_files/framework.png" class="publogo" height="120" width="300 px">
             <p> 
