--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@ a, a:visited { color : #0050e7; }
         <br>
 	<br>
         <div class="publication">
-            <img src="./Zero-DCE_files/framework.png" class="publogo" height="120" width="300 px">
+            <img src="./depth_SR_logo.png" class="publogo" height="120" width="300 px">
             <p> 
                 <strong>
-                    <a href="https://arxiv.org/abs/2001.06826">Zero-Reference Deep Curve Estimation for Low-Light Image Enhancement</a>
+                    <a href="https://ieeexplore.ieee.org/document/8579111">Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</a>
                 </strong>
-		<em>arXiv Preprint, 2020</em>
+		<em>TIP, 2019</em>
                 <br>
-                Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Chen Change Loy, Junhui Hou, Sam Kwong, Runmin Cong.
+                Chunle Guo*, <b>Chongyi Li*</b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/abs/2001.06826">PDF</a>
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Project Page</a>
-                    <a href="https://li-chongyi.github.io/Proj_Zero-DCE.html">Code</a>
+                    <a href="https://ieeexplore.ieee.org/document/8579111">PDF</a>
+                    <a href="https://li-chongyi.github.io/proj_SR.html">Project Page</a>
+                    <a href="https://drive.google.com/file/d/18y6jpGnjqYINzMFJeVHcg4SQiYM-lFBb/view">Code</a>
                 </span>
             </p>
           </div>
